Revision history for PCRD

{{$NEXT}}
	- Execute hook now gets passed the return value of the function

0.002 - 2025-05-17
	- Fix calculation of cpu usage
	- Add configurable time window of readings taken for battery life calculation
	- Protect against system clock changing to the future causing the program to go into a loop
	- Add minimal hook system, allow hooking to execution of module features
	- Brightness and volume steps are now configurable
	- Fix --logs argument to pcrctl
	- Add config action to pcrctl, explaining current config

0.001 - 2025-05-15
	- First version
